fix: align trust left column to top of layout

--- a/assets/scss/pages/_front-page-trust.scss
+++ b/assets/scss/pages/_front-page-trust.scss
@@ -53,7 +53,7 @@
 
 .trust-section__left {
   position: sticky;
-  top: #{mixins.vw(120px)};
+  top: 0;
 }
 
 .trust-section__marker {
